Branch Change Issues Addressed